[gd_scene load_steps=4 format=3 uid="uid://bi6nyd4hvg6cp"]

[ext_resource type="Texture2D" uid="uid://sefkxrvfcq2g" path="res://assets/ice-cream-background.PNG" id="1_m4ant"]
[ext_resource type="Texture2D" uid="uid://bg7vfeuvyeg3t" path="res://assets/ice-cream-bar.png" id="2_jxud5"]
[ext_resource type="Script" path="res://scripts/moving_bar.gd" id="3_8qkiy"]

[node name="BaseStation" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -2.0
offset_top = -41.0
offset_right = 1122.0
offset_bottom = 760.237
texture = ExtResource("1_m4ant")
expand_mode = 5
stretch_mode = 5

[node name="MovingBar" type="Sprite2D" parent="."]
position = Vector2(585, 374)
scale = Vector2(0.504555, 0.609908)
texture = ExtResource("2_jxud5")
script = ExtResource("3_8qkiy")

[node name="Intersection" type="ColorRect" parent="MovingBar"]
offset_left = -523.0
offset_top = -177.0
offset_right = -517.0
offset_bottom = -111.0
color = Color(1, 1, 1, 0)

[node name="SuccessZone" type="ColorRect" parent="."]
offset_left = 276.0
offset_top = 253.0
offset_right = 372.0
offset_bottom = 308.0
color = Color(1, 1, 1, 0)

[node name="KelpButton" type="TextureButton" parent="."]
offset_left = 145.0
offset_top = 121.0
offset_right = 235.0
offset_bottom = 197.0
action_mode = 0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(559, 369)
zoom = Vector2(1.05, 0.9)

[node name="MilkBar#MilkIntersection" type="ColorRect" parent="."]
offset_left = 577.0
offset_top = 12.0
offset_right = 587.0
offset_bottom = 32.0
color = Color(1, 1, 1, 0)

[node name="MilkSuccessZone" type="ColorRect" parent="."]
offset_left = 803.0
offset_top = 363.0
offset_right = 877.0
offset_bottom = 376.0
color = Color(1, 1, 1, 0)
metadata/_edit_lock_ = true

[connection signal="focus_entered" from="SuccessZone" to="MovingBar" method="_on_success_zone_entered"]
[connection signal="pressed" from="KelpButton" to="MovingBar" method="_on_kelp_button_pressed"]
